<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/costomborder"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="312dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/primeregular"
        android:gravity="top"
        android:text="@string/results"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2_results"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/primelight"
        android:text="@string/setResults"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/primeregular"
        android:text="@string/Stats"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="312dp"
        android:layout_height="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="420dp"
        android:fontFamily="@font/primelight"
        android:text="@string/setResults"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</LinearLayout>