<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".explorescreen"
    tools:showIn="@layout/activity_explorescreen"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/Explore"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/primeregular"
        android:text="@string/title_activity_explorescreen"
        android:textColor="#ffffff"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="o" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frameLayout"
        android:layout_width="298dp"
        android:layout_height="445dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="41dp"
            android:fontFamily="@font/primelight"
            android:gravity="center"
            android:text="@string/instructions"
            android:textColor="#ffffff"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="90dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="240dp"
            android:layout_height="286dp"
            android:scaleType="fitXY"
            android:layout_gravity="top|center"
            android:maxWidth="241dp"
            android:maxHeight="286dp"
            android:top="10dp"
            app:srcCompat="@android:color/background_dark" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="25dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="465dp"
        android:layout_marginEnd="343dp"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Explore"
        app:srcCompat="@drawable/target" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frameLayout2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape"
        android:visibility="invisible"
        android:paddingTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.47">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results"
            android:fontFamily="@font/primeregular"
            android:textColor="#ffffff"/>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setResults"
            android:fontFamily="@font/primelight"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Stats"
            android:fontFamily="@font/primeregular"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setResults"
            android:fontFamily="@font/primelight"
            android:textColor="#ffffff"/>

    </FrameLayout>


</android.support.constraint.ConstraintLayout>