<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".whole_results"
    tools:showIn="@layout/activity_whole_results">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="326dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="511dp"
        android:fontFamily="@font/primeregular"
        android:text="@string/results"
        android:textColor="#ffffff"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="340dp"
        android:layout_height="450dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="49dp"
        android:background="@drawable/costomborder"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="312dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="56dp"
            android:fontFamily="@font/primeregular"
            android:gravity="top"
            android:text="@string/results"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="56dp"
            android:fontFamily="@font/primelight"
            android:text="@string/setResults"
            android:textColor="#ffffff"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="56dp"
            android:fontFamily="@font/primeregular"
            android:text="@string/Stats"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="312dp"
            android:layout_height="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="420dp"
            android:fontFamily="@font/primelight"
            android:text="@string/setResults"
            android:textColor="#ffffff"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>